[package]
name = "yc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yc-diagnostics = { path = "../yc-diagnostics" }
yc-parser = { path = "../yc-parser" }
yc-ast = { path = "../yc-ast" }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
clap = { version = "3.2.17", features = ["derive", "cargo"] }
anyhow = "1.0.61"
wild = "2"
colored = "2"
